@@ -53,8 +53,8 @@ static int cod_householder_mh(const double tau, const gsl_vector * v,
 static int cod_householder_hv(const double tau, const gsl_vector * v, gsl_vector * w);
 static int cod_householder_ZTvec(const gsl_matrix * QRZ, const gsl_vector * tau_Z, const size_t rank,
                                  gsl_vector * v);
-static int cod_trisolve(gsl_matrix * R, const double lambda, const gsl_vector * b,
-                        gsl_matrix * S, gsl_vector * x, gsl_vector * work);
+static int cod_trireg_solve(const gsl_matrix * R, const double lambda, const gsl_vector * b,
+                            gsl_matrix * S, gsl_vector * x, gsl_vector * work);
 
 int
 gsl_linalg_COD_decomp_e(gsl_matrix * A, gsl_vector * tau_Q, gsl_vector * tau_Z,
@@ -216,12 +216,14 @@ Inputs: lambda   - parameter
         b        - rhs vector, length M
         x        - (output) solution vector, length N
         residual - (output) residual vector, b - A x, length M
+        S        - workspace, rank-by-rank
+        work     - workspace, length rank
 */
 
 int
 gsl_linalg_COD_lssolve2 (const double lambda, const gsl_matrix * QRZ, const gsl_vector * tau_Q, const gsl_vector * tau_Z,
                          const gsl_permutation * perm, const size_t rank, const gsl_vector * b,
-                         gsl_vector * x, gsl_vector * residual)
+                         gsl_vector * x, gsl_vector * residual, gsl_matrix * S, gsl_vector * work)
 {
   const size_t M = QRZ->size1;
   const size_t N = QRZ->size2;
@@ -246,13 +248,19 @@ gsl_linalg_COD_lssolve2 (const double lambda, const gsl_matrix * QRZ, const gsl_
     {
       GSL_ERROR ("matrix size must match residual size", GSL_EBADLEN);
     }
+  else if (S->size1 != rank || S->size2 != rank)
+    {
+      GSL_ERROR ("S must be rank-by-rank", GSL_EBADLEN);
+    }
+  else if (work->size != rank)
+    {
+      GSL_ERROR ("work must be length rank", GSL_EBADLEN);
+    }
   else
     {
       gsl_matrix_const_view R11 = gsl_matrix_const_submatrix (QRZ, 0, 0, rank, rank);
       gsl_vector_view c1 = gsl_vector_subvector(residual, 0, rank);
       gsl_vector_view y1 = gsl_vector_subvector(x, 0, rank);
-      gsl_matrix *S = gsl_matrix_alloc(rank, rank);
-      gsl_vector *work = gsl_vector_alloc(rank);
 
       gsl_vector_set_zero(x);
 
@@ -261,7 +269,7 @@ gsl_linalg_COD_lssolve2 (const double lambda, const gsl_matrix * QRZ, const gsl_
       gsl_linalg_QR_QTvec (QRZ, tau_Q, residual);
 
       /* solve [ R11 ; lambda*I ] y1 = [ (Q^T b)(1:r) ; 0 ] */
-      cod_trisolve(&(R11.matrix), lambda, &(c1.vector), S, &(y1.vector), work);
+      cod_trireg_solve(&(R11.matrix), lambda, &(c1.vector), S, &(y1.vector), work);
 
       /* save y1 for later residual calculation */
       gsl_vector_memcpy(work, &(y1.vector));
@@ -279,9 +287,6 @@ gsl_linalg_COD_lssolve2 (const double lambda, const gsl_matrix * QRZ, const gsl_
 
       gsl_vector_sub(&(c1.vector), work);
       gsl_linalg_QR_Qvec(QRZ, tau_Q, residual);
-
-      gsl_matrix_free(S);
-      gsl_vector_free(work);
 
       return GSL_SUCCESS;
     }
@@ -661,15 +666,23 @@ cod_householder_ZTvec(const gsl_matrix * QRZ, const gsl_vector * tau_Z, const si
 }
 
 /*
-cod_trisolve()
+cod_trireg_solve()
 
   This function computes the solution to the least squares system
 
   [    R     ] x = [ b ]
   [ lambda*I ]     [ 0 ]
 
-  where R is an N-by-N upper triangular matrix, lambda is a scalar parameter,
-  and b is a vector of length N.
+where R is an N-by-N upper triangular matrix, lambda is a scalar parameter,
+and b is a vector of length N. This is done by computing the QR factorization
+
+[    R     ] = W S^T
+[ lambda*I ]
+
+where S^T is upper triangular, and solving
+
+S^T x = W^T [ b ]
+            [ 0 ]
 
 Inputs: R      - full rank upper triangular matrix; the diagonal
                  elements are modified but restored on output
@@ -681,29 +694,28 @@ Inputs: R      - full rank upper triangular matrix; the diagonal
 */
 
 static int
-cod_trisolve (gsl_matrix * R, const double lambda, const gsl_vector * b,
-              gsl_matrix * S, gsl_vector * x, gsl_vector * work)
+cod_trireg_solve (const gsl_matrix * R, const double lambda, const gsl_vector * b,
+                  gsl_matrix * S, gsl_vector * x, gsl_vector * work)
 {
   const size_t N = R->size2;
-  gsl_vector_view diag = gsl_matrix_diagonal(R);
-  size_t i, j, k, nsing;
+  gsl_vector_const_view diag = gsl_matrix_const_diagonal(R);
+  size_t i, j, k;
 
-  if (lambda == 0.0)
+  if (lambda <= 0.0)
     {
       GSL_ERROR("lambda must be positive", GSL_EINVAL);
     }
 
-  /* Copy R and b to preserve input and initialise s. In particular,
-     save the diagonal elements of r in x */
-  gsl_matrix_tricpy('U', 0, S, R);
-  gsl_vector_memcpy(work, b);
-  gsl_vector_memcpy(x, &diag.vector);
+  /* copy R and b to preserve input and initialise S; store diag(R) in work */
+  gsl_matrix_transpose_tricpy('U', 0, S, R);
+  gsl_vector_memcpy(work, &diag.vector);
+  gsl_vector_memcpy(x, b);
 
-  /* eliminate the diagonal matrix d using a Givens rotation */
+  /* eliminate the diagonal matrix lambda*I using Givens rotations */
 
   for (j = 0; j < N; j++)
     {
-      double qtbpj;
+      double bj = 0.0;
 
       gsl_matrix_set (S, j, j, lambda);
 
@@ -712,21 +724,19 @@ cod_trisolve (gsl_matrix * R, const double lambda, const gsl_vector * b,
           gsl_matrix_set (S, k, k, 0.0);
         }
 
-      /* The transformations to eliminate the row of d modify only a
-         single element of qtb beyond the first n, which is initially
+      /* the transformations to eliminate the row of lambda*I modify only a
+         single element of b beyond the first n, which is initially
          zero */
-
-      qtbpj = 0;
 
       for (k = j; k < N; k++)
         {
-          /* Determine a Givens rotation which eliminates the
-             appropriate element in the current row of d */
+          /* determine a Givens rotation which eliminates the
+             appropriate element in the current row of lambda*I */
 
           double sine, cosine;
 
-          double wk = gsl_vector_get (work, k);
-          double rkk = gsl_matrix_get (R, k, k);
+          double xk = gsl_vector_get (x, k);
+          double rkk = gsl_vector_get (work, k);
           double skk = gsl_matrix_get (S, k, k);
 
           if (skk == 0)
@@ -748,17 +758,17 @@ cod_trisolve (gsl_matrix * R, const double lambda, const gsl_vector * b,
             }
 
           /* Compute the modified diagonal element of r and the
-             modified element of [qtb,0] */
+             modified element of [b,0] */
 
           {
             double new_rkk = cosine * rkk + sine * skk;
-            double new_wk = cosine * wk + sine * qtbpj;
+            double new_xk = cosine * xk + sine * bj;
             
-            qtbpj = -sine * wk + cosine * qtbpj;
+            bj = -sine * xk + cosine * bj;
 
-            gsl_matrix_set(R, k, k, new_rkk);
+            gsl_vector_set(work, k, new_rkk);
             gsl_matrix_set(S, k, k, new_rkk);
-            gsl_vector_set(work, k, new_wk);
+            gsl_vector_set(x, k, new_xk);
           }
 
           /* Accumulate the transformation in the row of s */
@@ -775,63 +785,10 @@ cod_trisolve (gsl_matrix * R, const double lambda, const gsl_vector * b,
               gsl_matrix_set(S, i, i, new_sii);
             }
         }
-
-      /* Store the corresponding diagonal element of s and restore the
-         corresponding diagonal element of r */
-
-      {
-        double xj = gsl_vector_get(x, j);
-        gsl_matrix_set (R, j, j, xj);
-      }
     }
 
-  /* Solve the triangular system for z. If the system is singular then
-     obtain a least squares solution */
-
-  nsing = N;
-
-  for (j = 0; j < N; j++)
-    {
-      double sjj = gsl_matrix_get (S, j, j);
-
-      if (sjj == 0)
-        {
-          nsing = j;
-          break;
-        }
-    }
-
-  for (j = nsing; j < N; j++)
-    {
-      gsl_vector_set (work, j, 0.0);
-    }
-
-  for (k = 0; k < nsing; k++)
-    {
-      double sum = 0;
-
-      j = (nsing - 1) - k;
-
-      for (i = j + 1; i < nsing; i++)
-        {
-          sum += gsl_matrix_get(S, i, j) * gsl_vector_get(work, i);
-        }
-
-      {
-        double wj = gsl_vector_get (work, j);
-        double sjj = gsl_matrix_get (S, j, j);
-
-        gsl_vector_set (work, j, (wj - sum) / sjj);
-      }
-    }
-
-  /* Permute the components of z back to the components of x */
-
-  for (j = 0; j < N; j++)
-    {
-      double wj = gsl_vector_get (work, j);
-      gsl_vector_set (x, j, wj);
-    }
+  /* solve: S^T x = rhs in place */
+  gsl_blas_dtrsv(CblasLower, CblasTrans, CblasNonUnit, S, x);
 
   return GSL_SUCCESS;
 }
